updated css so that footer is fixed to bottom of the page and there are no extra spaces

--- a/src/styles/footerStyles.css
+++ b/src/styles/footerStyles.css
@@ -44,3 +44,10 @@
 .push {
   height: 50px;
 }
+
+.footer{
+    height: 50px;
+    margin-top: -50px;
+    position: fixed;
+    bottom: 0;
+}
