--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -142,10 +142,3 @@ html, body {
   }
 
 
-  .wrapper {
-    min-height: 100vw;
-  
-    /* Equal to height of footer */
-    /* But also accounting for potential margin-bottom of last child */
-    margin-bottom: -50px;
-  }
